<resources>
    <string name="app_name">Weather</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="today">Today</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="max_temper">Max Temper</string>
    <string name="something_went_wrong_try_again_later">Something Went Wrong Try Again Later</string>
</resources>