<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:background="#25294a"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#282c4c"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:textSize="35sp"
            android:textColor="@android:color/white"
            android:id="@+id/todaysDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:id="@+id/dateDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todaysDate" />

        <TextView
            android:textSize="60sp"
            android:textColor="@android:color/white"
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:fontFamily="@font/montserrat_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateDetails" />

        <TextView
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature" />

        <TextView
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:id="@+id/weatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/detailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- First Row -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:weightSum="3">

                <!-- Sunrise -->
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/sunriseLayout"
                    android:background="@drawable/card_background"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/sunriseImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        android:contentDescription="@string/app_name" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:id="@+id/sunriseTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <!-- Sunset -->
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/sunsetLayout"
                    android:background="@drawable/card_background"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/sunsetImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        android:contentDescription="@string/app_name" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:id="@+id/sunsetTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <!-- Pressure -->
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/pressureLayout"
                    android:background="@drawable/card_background"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/pressureImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        android:contentDescription="@string/app_name" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:id="@+id/pressureTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- Second Row -->
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <!-- Humidity -->
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/humidityLayout"
                    android:background="@drawable/card_background"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/humidityImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        android:contentDescription="@string/app_name" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:id="@+id/humidityTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <!-- Max Temperature -->
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/maxTemperatureLayout"
                    android:background="@drawable/card_background"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/maxTemperatureImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/temperature"
                        android:contentDescription="@string/app_name" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:id="@+id/maxTemperatureTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temper"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:id="@+id/maxTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <!-- Visibility -->
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/visibilityLayout"
                    android:background="@drawable/card_background"
                    android:padding="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/visibilityImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/visibility"
                        android:contentDescription="@string/app_name" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:id="@+id/visibilityTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visibility"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:id="@+id/visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/montserrat_light" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:id="@+id/errorTxt"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/something_went_wrong_try_again_later"
        android:includeFontPadding="false"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
</androidx.constraintlayout.widget.ConstraintLayout>
